validation and swagger for followers endpoint
