# validation/followers_validation.py
@@ -1,0 +1,10 @@
+from marshmallow import Schema, fields
+
+class FollowersSchema(Schema):
+    followers = fields.List(
+        fields.Str(),
+        required=True,
+    )
+
+
+followers_schema = FollowersSchema()
